# optimath

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  array_alloc.S  binder.c  build.sh  build_catch2.sh  cleanup.sh  custom_array.c  custom_vector.cpp  custom_vector.h  example.cpp  main.c  olloc.c  optimath.cpp  optivector.h  optivector.hpp
algorithms/: CMakeLists.txt
algorithms/cpp/: algorithm.hpp  test_algorithm.cpp
algorithms/python/: algorithm.py
allocator/: olloc.c  olloc.h
cpp/: algoritmos.hpp  teste_algoritmos.cpp
examples/: optivector.cpp
optimath/: optivector.cpp  optivector.hpp
python/: algoritmos.py
tests/: test_optimath.cpp
